# mdscope

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: apo_globular_protein.yaml  config.yaml  cryptic_site.yaml  dipeptide.yaml  folding.yaml  full_commented_template.yaml  generated_sample.yaml  local_dual.yaml  local_dual_pca_site.yaml  local_dual_strict.yaml  water.yaml
docs/: CODE_PROVENANCE.md  TODO.md
src/mdscope/: cli.py  config.py  pipeline.py  plotting.py  replot.py  state.py
src/mdscope/analysis/: __init__.py  _common.py  cluster.py  convergence.py  distance.py  dssp.py  mapping.py  pca.py  pocket.py  ramachandran.py  representative.py  rg.py  rmsd.py  rmsf.py  sasa.py  steps.py  water.py
tests/: test_config.py  test_convergence.py  test_local_data_config.py  test_pca_distance.py  test_pipeline_targets.py  test_pocket.py  test_replot.py  test_state_resume.py  test_water.py
tests/data/ace-a-nme-with-water/: ace-A-nme.gro  hrex_water.xtc
